[project]
name = "hacker-news-whoishiring"
version = "0.1.0"
description = ""
authors = [
    {name = "Jonathan Hirokawa",email = "johirokawa@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
